test/libsolidity/syntaxTests/globalFunctions/blobhash_not_declared_pre_cancun.sol
contract C
{
    function f() public pure {
        blobhash;
    }
}
// ====
// EVMVersion: <=shanghai
// ----
// DeclarationError 7576: (52-60): Undeclared identifier. Did you mean "blockhash"?
